Still working away, I figured out XML issues, it was XML whitespace, it never used to keep the whitespace.

--- a/less/index.less
+++ b/less/index.less
@@ -90,11 +90,4 @@ html, body
 	color: h3-color;
 }
 
-#name
-{
-	width: 500px;
-	height: 200px;
-	background-color: @section-color;
-}
-
 
